# user-items

./: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  cli.py  docker-compose.yml  docker.env  pyproject.toml
.github/workflows/: github-registry.yml  main.yml
docker_test/: pyproject.toml
docker_test/docker_test/: app.py  database.py  models.py  schemas.py
docker_test/docker_test/alembic/: env.py
docker_test/docker_test/alembic/versions/: a90b80856b94_added_users_and_items_table.py
docker_test/tests/: test_docker_test1.py
