[tool.poetry]
name = "docker_test"
version = "0.1.0"
description = ""
authors = ["Prakash Prajapati <paxprajapati@gmail.com>"]
packages = [
    { include = "docker_test" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
